--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -20,7 +21,9 @@
         </header>
 
         <main>
-            {% block body %}{% endblock %}
+            <div class="content">
+                {% block body %}{% endblock %}
+            </div>
         </main>
 
         <footer>
