--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,13 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=100vw, initial-scale=1, maximum-scale=3">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon"
               href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
-            <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/standard.css') }}">
+            <link rel="stylesheet" media="screen and (width >= 990px)" href="{{ asset('assets/css/wide.css') }}">
         {% endblock %}
 
         {% block javascripts %}
